docs/post/迈向istio/2-服务路由/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test
  namespace: test
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
  namespace: test
spec:
  hosts:
  - "*"
  gateways:
  - test
  http:
  - match:
    - uri:
        prefix: /nginx
    rewrite:
      uri: "/"
    route:
    - destination:
       host: nginx
       subset: v1
  - match:
    - uri:
        prefix: /tomcat
    rewrite:
      uri: "/"
    route:
    - destination:
       host: tomcat
       subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
  namespace: test
spec:
  host: nginx
  subsets:
  - name: v1
    labels:
      app: nginx
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tomcat
  namespace: test
spec:
  host: tomcat
  subsets:
  - name: v1
    labels:
      app: tomcat
      version: v1
